--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-file-uploader": "^7.1.1",
+    "angular2-moment": "^1.9.0",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
