--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "ts-node": "~7.0.0",
+    "typescript": "3.5.3"
   }
 }
